// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/csf/EmptyDefaultExport.stories.js 1`] = `
{
  "id": "auto-generated-title-prefix-csf-emptydefaultexport",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-csf-emptydefaultexport",
      "isDocs": true,
      "name": "EmptyDefaultExport",
    },
    {
      "id": "auto-generated-title-prefix-csf-emptydefaultexport--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/csf/EmptyDefaultExport",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/csf/EmptyTitle.stories.js 1`] = `
{
  "id": "auto-generated-title-prefix-csf-emptytitle",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-csf-emptytitle",
      "isDocs": true,
      "name": "EmptyTitle",
    },
    {
      "id": "auto-generated-title-prefix-csf-emptytitle--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/csf/EmptyTitle",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/csf/ExtraTitle.stories.js 1`] = `
{
  "id": "auto-generated-title-prefix-explicit-title",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-explicit-title",
      "isDocs": true,
      "name": "Explicit title",
    },
    {
      "id": "auto-generated-title-prefix-explicit-title--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/Explicit title",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/csf/nested/WithoutTitle.stories.js 1`] = `
{
  "id": "auto-generated-title-prefix-csf-nested-withouttitle",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-csf-nested-withouttitle",
      "isDocs": true,
      "name": "WithoutTitle",
    },
    {
      "id": "auto-generated-title-prefix-csf-nested-withouttitle--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/csf/nested/WithoutTitle",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/csf/nested/nested.stories.js 1`] = `
{
  "id": "auto-generated-title-prefix-csf-nested",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-csf-nested",
      "isDocs": true,
      "name": "nested",
    },
    {
      "id": "auto-generated-title-prefix-csf-nested--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/csf/nested",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/csf/withIndex/index.stories.js 1`] = `
{
  "id": "auto-generated-title-prefix-csf-withindex",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-csf-withindex",
      "isDocs": true,
      "name": "withIndex",
    },
    {
      "id": "auto-generated-title-prefix-csf-withindex--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/csf/withIndex",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/mdx/MdxMeta.stories.mdx 1`] = `
{
  "id": "auto-generated-title-prefix-mdx-mdxmeta",
  "isDocsOnly": true,
  "stories": [
    {
      "id": "auto-generated-title-prefix-mdx-mdxmeta--page",
      "isDocs": true,
      "name": "Page",
    },
  ],
  "title": "Auto-generated title prefix/mdx/MdxMeta",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/mdx/MdxMetaAndStory.stories.mdx 1`] = `
{
  "id": "auto-generated-title-prefix-mdx-mdxmetaandstory",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-mdx-mdxmetaandstory",
      "isDocs": true,
      "name": "MdxMetaAndStory",
    },
    {
      "id": "auto-generated-title-prefix-mdx-mdxmetaandstory--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/mdx/MdxMetaAndStory",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/autoTitle/mdx/MdxStory.stories.mdx 1`] = `
{
  "id": "auto-generated-title-prefix-mdx-mdxstory",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "auto-generated-title-prefix-mdx-mdxstory",
      "isDocs": true,
      "name": "MdxStory",
    },
    {
      "id": "auto-generated-title-prefix-mdx-mdxstory--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Auto-generated title prefix/mdx/MdxStory",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/BasicCsf.stories.js 1`] = `
{
  "id": "example-basic-csf",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-basic-csf",
      "isDocs": true,
      "name": "Basic CSF",
    },
    {
      "id": "example-basic-csf--primary",
      "isDocs": false,
      "name": "Primary",
    },
    {
      "id": "example-basic-csf--secondary",
      "isDocs": false,
      "name": "Secondary",
    },
    {
      "id": "example-basic-csf--large",
      "isDocs": false,
      "name": "Large",
    },
    {
      "id": "example-basic-csf--small",
      "isDocs": false,
      "name": "Small",
    },
  ],
  "title": "Example/Basic CSF",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/CsfV1.stories.js 1`] = `
{
  "id": "example-csf-v1",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-csf-v1",
      "isDocs": true,
      "name": "CSF v1",
    },
    {
      "id": "example-csf-v1--v-1-story-name",
      "isDocs": false,
      "name": "Renamed via non-hoisted story",
    },
    {
      "id": "example-csf-v1--v-2-v-1-story-name",
      "isDocs": false,
      "name": "v2 name override",
    },
    {
      "id": "example-csf-v1--v-2-v-1-story-name-empty",
      "isDocs": false,
      "name": "v1 name should be used",
    },
  ],
  "title": "Example/CSF v1",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/CsfWithMdx.stories.mdx 1`] = `
{
  "id": "example-mdx-importing-csf",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-mdx-importing-csf",
      "isDocs": true,
      "name": "MDX importing CSF",
    },
    {
      "id": "example-mdx-importing-csf--basic",
      "isDocs": false,
      "name": "Basic",
    },
    {
      "id": "example-mdx-importing-csf--basic-2",
      "isDocs": false,
      "name": "Story name from MDX",
    },
    {
      "id": "example-mdx-importing-csf--basic-3",
      "isDocs": false,
      "name": "Basic 3",
    },
  ],
  "title": "Example/MDX importing CSF",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/CustomId.stories.js 1`] = `
{
  "id": "manually-specified-csf-story-id",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "manually-specified-csf-story-id",
      "isDocs": true,
      "name": "Custom ID CSF",
    },
    {
      "id": "manually-specified-csf-story-id--story",
      "isDocs": false,
      "name": "Story",
    },
  ],
  "title": "Example/Custom ID CSF",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/CustomId.stories.mdx 1`] = `
{
  "id": "manually-specified-mdx-id",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "manually-specified-mdx-id",
      "isDocs": true,
      "name": "Custom ID MDX",
    },
    {
      "id": "manually-specified-mdx-id--story",
      "isDocs": false,
      "name": "Story",
    },
  ],
  "title": "Example/Custom ID MDX",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/CustomName.stories.js 1`] = `
{
  "id": "example-custom-name",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-custom-name",
      "isDocs": true,
      "name": "Custom Name",
    },
    {
      "id": "example-custom-name--custom-name",
      "isDocs": false,
      "name": "Custom story name",
    },
    {
      "id": "example-custom-name--overridden",
      "isDocs": false,
      "name": "Custom story name override",
    },
    {
      "id": "example-custom-name--named-via-variable",
      "isDocs": false,
      "name": "Custom story name var",
    },
    {
      "id": "example-custom-name--interpolated-name",
      "isDocs": false,
      "name": "Custom story name var in template string",
    },
    {
      "id": "example-custom-name--empty-name",
      "isDocs": false,
      "name": "Empty Name",
    },
    {
      "id": "example-custom-name--leading-whitespace",
      "isDocs": false,
      "name": "     Leading whitespace",
    },
  ],
  "title": "Example/Custom Name",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/DeepTree.stories.js 1`] = `
{
  "id": "example-deep-tree-with-several-kinds",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-deep-tree-with-several-kinds",
      "isDocs": true,
      "name": "Kinds",
    },
    {
      "id": "example-deep-tree-with-several-kinds--story",
      "isDocs": false,
      "name": "Story",
    },
  ],
  "title": "Example/Deep/Tree/With/Several/Kinds",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/DocsOnly.stories.mdx 1`] = `
{
  "id": "example-mdx-docs-only",
  "isDocsOnly": true,
  "stories": [
    {
      "id": "example-mdx-docs-only--page",
      "isDocs": true,
      "name": "Page",
    },
  ],
  "title": "Example/MDX Docs Only",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/DocsOnlyTop.stories.mdx 1`] = `
{
  "id": "mdx-docs-at-top-level",
  "isDocsOnly": true,
  "stories": [
    {
      "id": "mdx-docs-at-top-level--page",
      "isDocs": true,
      "name": "Page",
    },
  ],
  "title": "MDX Docs at top level",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/Excluded.stories.js 1`] = `
{
  "id": "test-exclusions-excluded",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "test-exclusions-excluded",
      "isDocs": true,
      "name": "Excluded",
    },
    {
      "id": "test-exclusions-excluded--other-export",
      "isDocs": false,
      "name": "Other Export",
    },
  ],
  "title": "Test/Exclusions/Excluded",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/ExportStyles.stories.js 1`] = `
{
  "id": "example-export-styles",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-export-styles",
      "isDocs": true,
      "name": "Export Styles",
    },
    {
      "id": "example-export-styles--normal-export",
      "isDocs": false,
      "name": "Normal Export",
    },
    {
      "id": "example-export-styles--alternative-export-name",
      "isDocs": false,
      "name": "Alternative Export Name",
    },
    {
      "id": "example-export-styles--export-name-overridden",
      "isDocs": false,
      "name": "Override name 3",
    },
  ],
  "title": "Example/Export Styles",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/Form.stories.js 1`] = `
{
  "id": "example-form",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-form",
      "isDocs": true,
      "name": "Form",
    },
    {
      "id": "example-form--form",
      "isDocs": false,
      "name": "Form",
    },
  ],
  "title": "Example/Form",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/Hoisting.stories.js 1`] = `
{
  "id": "example-hoisting",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-hoisting",
      "isDocs": true,
      "name": "Hoisting",
    },
    {
      "id": "example-hoisting--hoisting",
      "isDocs": false,
      "name": "Hoisting",
    },
  ],
  "title": "Example/Hoisting",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/Included.stories.js 1`] = `
{
  "id": "test-exclusions-included",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "test-exclusions-included",
      "isDocs": true,
      "name": "Included",
    },
    {
      "id": "test-exclusions-included--included-export",
      "isDocs": false,
      "name": "Included Export",
    },
  ],
  "title": "Test/Exclusions/Included",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/JsxExtension.stories.jsx 1`] = `
{
  "id": "example-jsx-extension",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-jsx-extension",
      "isDocs": true,
      "name": "JSX extension",
    },
    {
      "id": "example-jsx-extension--story",
      "isDocs": false,
      "name": "Story",
    },
  ],
  "title": "Example/JSX extension",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/MdxWithStories.stories.mdx 1`] = `
{
  "id": "example-mdx-with-stories",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-mdx-with-stories",
      "isDocs": true,
      "name": "MDX with Stories",
    },
    {
      "id": "example-mdx-with-stories--mdx-first-story",
      "isDocs": false,
      "name": "MDX first story",
    },
    {
      "id": "example-mdx-with-stories--mdx-second-story",
      "isDocs": false,
      "name": "MDX second story",
    },
    {
      "id": "example-mdx-with-stories--mdx-story-3",
      "isDocs": false,
      "name": "MDX Story 3",
    },
  ],
  "title": "Example/MDX with Stories",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/MdxWithStoriesTop.stories.mdx 1`] = `
{
  "id": "mdx-with-stories-top",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "mdx-with-stories-top",
      "isDocs": true,
      "name": "MDX with stories, top",
    },
    {
      "id": "mdx-with-stories-top--mdx-with-stories-top",
      "isDocs": false,
      "name": "MDX with stories, top",
    },
  ],
  "title": "MDX with stories, top",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/MergeOne.stories.js 1`] = `
{
  "id": "example-merge",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-merge",
      "isDocs": true,
      "name": "Merge",
    },
    {
      "id": "example-merge--one",
      "isDocs": false,
      "name": "One",
    },
  ],
  "title": "Example/Merge",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/MergeTwo.stories.js 1`] = `
{
  "id": "example-merge",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-merge",
      "isDocs": true,
      "name": "Merge",
    },
    {
      "id": "example-merge--two",
      "isDocs": false,
      "name": "Two",
    },
  ],
  "title": "Example/Merge",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/Precedence.stories.mdx 1`] = `
{
  "id": "example-precedence",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-precedence",
      "isDocs": true,
      "name": "Precedence",
    },
    {
      "id": "example-precedence--small",
      "isDocs": false,
      "name": "Story with name, story, body",
    },
    {
      "id": "example-precedence--story-with-name-body",
      "isDocs": false,
      "name": "Story with name, body",
    },
  ],
  "title": "Example/Precedence",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/SameName.stories.js 1`] = `
{
  "id": "example-with-same-name",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-with-same-name",
      "isDocs": true,
      "name": "With Same Name",
    },
    {
      "id": "example-with-same-name--same-name",
      "isDocs": false,
      "name": "Same Name",
    },
  ],
  "title": "Example/With Same Name",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/SameNameChild.stories.js 1`] = `
{
  "id": "example-with-same-name-same-name",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-with-same-name-same-name",
      "isDocs": true,
      "name": "Same Name",
    },
    {
      "id": "example-with-same-name-same-name--nested-story",
      "isDocs": false,
      "name": "Nested Story",
    },
  ],
  "title": "Example/With Same Name/Same Name",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/StoryDeclarations.stories.js 1`] = `
{
  "id": "test-story-declarations",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "test-story-declarations",
      "isDocs": true,
      "name": "Story Declarations",
    },
    {
      "id": "test-story-declarations--const-declarator",
      "isDocs": false,
      "name": "Const Declarator",
    },
    {
      "id": "test-story-declarations--separate-declarator",
      "isDocs": false,
      "name": "Separate Declarator",
    },
    {
      "id": "test-story-declarations--separate-declarator-2",
      "isDocs": false,
      "name": "Separate declarator with story name",
    },
    {
      "id": "test-story-declarations--multiple-one",
      "isDocs": false,
      "name": "Multiple One",
    },
    {
      "id": "test-story-declarations--multiple-two",
      "isDocs": false,
      "name": "Multiple two (given name)",
    },
    {
      "id": "test-story-declarations--function-story",
      "isDocs": false,
      "name": "Renamed Function Story",
    },
    {
      "id": "test-story-declarations--separate-function-story",
      "isDocs": false,
      "name": "Separate Function Story",
    },
    {
      "id": "test-story-declarations--separate-function-story-2",
      "isDocs": false,
      "name": "Separate function story with story name",
    },
  ],
  "title": "Test/Story Declarations",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/TitleInterpolation.stories.js 1`] = `
{
  "id": "example-title-interpolation",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "example-title-interpolation",
      "isDocs": true,
      "name": "Title Interpolation",
    },
    {
      "id": "example-title-interpolation--primary",
      "isDocs": false,
      "name": "Primary",
    },
  ],
  "title": "Example/Title Interpolation",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/Top.stories.js 1`] = `
{
  "id": "top",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "top",
      "isDocs": true,
      "name": "Top",
    },
    {
      "id": "top--top-level-story",
      "isDocs": false,
      "name": "Top Level Story",
    },
  ],
  "title": "Top",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/TopHoisted.stories.js 1`] = `
{
  "id": "top-hoisted",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "top-hoisted",
      "isDocs": true,
      "name": "Top Hoisted",
    },
    {
      "id": "top-hoisted--top-hoisted",
      "isDocs": false,
      "name": "Top Hoisted",
    },
  ],
  "title": "Top Hoisted",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/TypeScript.stories.tsx 1`] = `
{
  "id": "test-typescript-sample",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "test-typescript-sample",
      "isDocs": true,
      "name": "Sample",
    },
    {
      "id": "test-typescript-sample--type-script-story",
      "isDocs": false,
      "name": "Type Script Story",
    },
    {
      "id": "test-typescript-sample--type-script-typed-story",
      "isDocs": false,
      "name": "Type Script Typed Story",
    },
    {
      "id": "test-typescript-sample--type-script-typed-generic-story",
      "isDocs": false,
      "name": "Type Script Typed Generic Story",
    },
    {
      "id": "test-typescript-sample--type-script-type-assertion-story",
      "isDocs": false,
      "name": "Type Script Type Assertion Story",
    },
  ],
  "title": "Test/TypeScript/Sample",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/TypeScriptAsMeta.stories.ts 1`] = `
{
  "id": "test-typescript-default-as-meta",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "test-typescript-default-as-meta",
      "isDocs": true,
      "name": "Default as Meta",
    },
    {
      "id": "test-typescript-default-as-meta--type-script-story",
      "isDocs": false,
      "name": "Type Script Story",
    },
  ],
  "title": "Test/TypeScript/Default as Meta",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/TypeScriptIdentifier.stories.ts 1`] = `
{
  "id": "test-typescript-typed-identifier",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "test-typescript-typed-identifier",
      "isDocs": true,
      "name": "Typed Identifier",
    },
    {
      "id": "test-typescript-typed-identifier--type-script-story",
      "isDocs": false,
      "name": "Type Script Story",
    },
  ],
  "title": "Test/TypeScript/Typed Identifier",
}
`;

exports[`StoryExplorerStoryFile parses story file project/src/stories/TypeScriptIdentifierAsMeta.stories.ts 1`] = `
{
  "id": "test-typescript-identifier-exported-as-meta",
  "isDocsOnly": false,
  "stories": [
    {
      "id": "test-typescript-identifier-exported-as-meta",
      "isDocs": true,
      "name": "Identifier Exported as Meta",
    },
    {
      "id": "test-typescript-identifier-exported-as-meta--type-script-story",
      "isDocs": false,
      "name": "Type Script Story",
    },
  ],
  "title": "Test/TypeScript/Identifier Exported as Meta",
}
`;
